# systeminfo-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: info.rs
src/: consts.rs  humanize.rs  lib.rs
src/common/: hostname.rs  ip.rs  mod.rs  os_arch.rs  utils.rs  version.rs
src/mac/: hwinfo.rs  osinfo.rs
src/nix/: hwinfo.rs  osinfo.rs
src/win/: hwinfo.rs  mod.rs  osinfo.rs
